# without-a-gradient

./: .gitignore  BUILD_LOG.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
delta/: README.md  pyproject.toml
delta/delta/: __init__.py  analysis.py  network.py  simulator.py  solver.py
delta/tests/: test_simulator.py
delta/web/: index.html
delta/web/src/: App.tsx
delta/web/src/sim/: delay.ts  network.ts
docs/: 00_project_story.md  01_algorithms.md  02_api_reference.md  03_benchmarks.md  04_results.md  README.md
examples/: compare_optimizers.py  plot_convergence.py
metaheuristics/: __init__.py  bayesian.py  benchmarks.py  cma_es.py  compare.py  core.py  differential_evolution.py  genetic.py  hill_climbing.py  pso.py  simulated_annealing.py
tests/: test_benchmarks.py  test_core.py  test_optimizers.py
web/: index.html  styles.css
web/js/: algos.js  bayes.js  landscape.js  main.js
